<resources>
    <string name="app_name" translatable="false">DanceIT</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="hintTextURL" translatable="false">Enter URL</string>
    <string name="hintTextTags">Enter TAGS</string>
    <string name="hintTextTagex">gwarara #joburg</string>
    <string name="privateHint">Your Library</string>
    <string name="publicHint">DANCEIT</string>
    <string name="enter_a_url">Enter a url.</string>
    <string name="enter_tags_e_g_kizomba">Enter tags e.g. #kizomba</string>
    <string name="public_video">Public</string>
    <string name="private_video">Private</string>
    <string name="save">SAVE</string>
    <string name="add_a_tag">Add a tag</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="update_tag">Update</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid Email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="prompt_username">Username</string>
    <string name="enter_tags">Enter tags</string>
    <string name="share">share</string>
    <string name="title_activity_library_search">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="create_folder">Create Folder</string>
    <string name="search">Search</string>
    <string name="update_tag_hint">Update tag</string>
    <string name="make_public">Make public</string>
    <string name="share_cap">Share</string>
    <string name="logout_text">Logout</string>
    <string name="sendto">Send To</string>
    <string name="Received">Received</string>
    <string name="third_fragment_label">third fragment</string>
    <string name="show_selected">Show Selected</string>
    <string name="select">Select</string>
    <string name="tagmanagement_text">Tag Management</string>
    <string name="occurrence">Occurrence</string>
    <string name="tag">Tag</string>
    <string name="title_activity_tag_management">TagManagementActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="NoResults">No Matching Results Found For</string>
    <string name="make_private">Make private</string>
    <string name="save_video">Save</string>
</resources>