<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.danceit.MainActivity">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/search"

        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/create_folder"
        android:title="@string/create_folder" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout_text"/>



</menu>
