<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddVideoActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_url"
            android:hint="@string/enter_a_url"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:visibility="visible">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"
                android:visibility="visible"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_tag"
            android:hint="@string/enter_tags"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"
                android:visibility="visible"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <RadioGroup
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="30dp"
            android:tooltipText="@string/publicHint">

              <RadioButton
                  android:id="@+id/radioButton_public"
            android:text="@string/public_video"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="5dp"/>

            <RadioButton
                android:id="@+id/radioButton_private"
                android:text="@string/private_video"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="5dp"/>

        </RadioGroup>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/save" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>