<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingClass">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_tag"
        android:hint="@string/add_a_tag"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:paddingBottom="20dp"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:visibility="visible" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="10"
        android:text="@string/cancel"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/add_tag_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="10"
        android:layout_margin="16dp"
        android:text="@string/add"
        android:layout_gravity="center_horizontal"
        />


    </LinearLayout>


</LinearLayout>